# bencoding

./: .gitattributes  .gitignore  .travis.yml  ChangeLog  NEWS.md  README.md  TODO.org  bencoding.cabal  changelog
bench/: Main.hs  comparison.html
examples/: pp.hs
pp/: pp.hs
res/: debian-7.1.0-amd64-CD-1.iso.torrent
src/Data/: BEncode.hs
src/Data/BEncode/: BDict.hs  Get.hs  Internal.hs  Types.hs
tests/: properties.hs
