name:                  bencoding
version:               0.1.0.0
synopsis:              A library for encoding and decoding the BEncode data.
description:           A library for encoding and decoding the BEncode data.
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              Codec, Data
build-type:            Simple
cabal-version:         >= 1.8

source-repository head
  type:                git
  location:            https://github.com/fmap/bencoding.git


library
  exposed-modules:     Data.BEncode
  other-modules:
  build-depends:       base       == 4.5.*
                     , containers >= 0.4.0
                     , bytestring >= 0.10.2.0
                     , attoparsec >= 0.10.4.0
                     , ansi-wl-pprint

  hs-source-dirs:      src

  ghc-options:         -Wall -fno-warn-unused-do-bind
-- -Werror

executable pp
  main-is:             pp.hs
  build-depends:       base        == 4.5.*
                     , bytestring  >= 0.10.2.0
                     , bencoding   >= 0.1.0.0

  hs-source-dirs:      pp
  ghc-options:         -Wall -O2
-- -Werror

test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             properties.hs
  hs-source-dirs:      tests

  build-depends:       base       == 4.5.*
                     , containers >= 0.4.0
                     , bytestring >= 0.10.2.0
                     , attoparsec >= 0.10.4.0
                     , ansi-wl-pprint

                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , bencoding >= 0.1.0.0

  ghc-options:         -Wall -fno-warn-orphans


benchmark bench-comparison
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench

  build-depends:       base == 4.5.*
                     , attoparsec >= 0.10.4.0
                     , bytestring >= 0.10.2.0

                     , criterion
                     , deepseq

                     , bencoding   >= 0.1.0.0
                     , bencode     >= 0.5
                     , AttoBencode >= 0.2.0.1

  ghc-options:         -O2 -Wall -fno-warn-orphans
