name:                  bencoding
version:               0.1.0.0
synopsis:              A library for encoding and decoding the BEncode data.
description:           A library for encoding and decoding the BEncode data.
homepage:              https://github.com/pxqr/bencoding
bug-reports:           https://github.com/pxqr/bencoding/issues
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              Codec, Data
build-type:            Simple
cabal-version:         >= 1.8

source-repository head
  type:                git
  location:            https://github.com/pxqr/bencoding.git


library
  exposed-modules:     Data.BEncode
  other-modules:

-- WARN package text is used only for instance declaration
  build-depends:       base       == 4.5.*
                     , containers == 0.4.*
                     , bytestring >= 0.10.2
                     , attoparsec == 0.10.*
                     , text       == 0.11.*
                     , ansi-wl-pprint

  hs-source-dirs:      src

  extensions:          PatternGuards
  ghc-options:         -Wall -fno-warn-unused-do-bind
-- -Werror

executable pp
  main-is:             pp.hs
  build-depends:       base        == 4.5.*
                     , bytestring >= 0.10.2
                     , bencoding   == 0.1.*

  hs-source-dirs:      pp
  ghc-options:         -Wall -O2
-- -Werror

test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             properties.hs
  hs-source-dirs:      tests

  build-depends:       base       == 4.5.*
                     , containers == 0.4.*
                     , bytestring >= 0.10.2
                     , attoparsec == 0.10.*
                     , ansi-wl-pprint

                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , bencoding == 0.1.*

  ghc-options:         -Wall -fno-warn-orphans


benchmark bench-comparison
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench

  build-depends:       base == 4.5.*
                     , attoparsec == 0.10.*
                     , bytestring >= 0.10.2

                     , criterion
                     , deepseq

                     , bencoding   == 0.1.*
                     , bencode     == 0.5
                     , AttoBencode == 0.2.*

  ghc-options:         -O2 -Wall -fno-warn-orphans
